--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/chilli-con-carne.html">Chilli con carne</a>
+        <a href="./recipes/yellow-chicken-curry">Yellow chicken curry</a>
     </body>   
 </html>
