Fix minor typo's

--- a/recipes/sesame-beef-stir-fry.html
+++ b/recipes/sesame-beef-stir-fry.html
@@ -42,7 +42,7 @@
             <li>Add beef until it's cooked. Put it to the side.</li>
             <li>Fry the rest of the vegetables on a high heat, for a short bit</li>
             <li>Add back the beef and the left over marinade, let it simmer for a bit</li>
-            <li>It's done. Enjoy the dish</li>
+            <li>It's done. Enjoy the dish.</li>
         </ol>
     </body>
 </html>
