--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head> 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/chilli-con-carne.html">Chilli con carne</a>
-        <a href="./recipes/yellow-chicken-curry">Yellow chicken curry</a>
+        <ul>
+            <li><a href="./recipes/chilli-con-carne.html">Chilli con carne</a></li>
+            <li><a href="./recipes/yellow-chicken-curry.html">Yellow chicken curry</a></li>
+            <li><a href="./recipes/sesame-beef-stir-fry.html">Sesame beef stir fry</a></li>
     </body>   
 </html>
