Add return to homepage link

--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -40,5 +40,6 @@
             <li>Add the kidney beans and bell pepper. Cook for additional 10min</li>
             <li>Serve with rice, pasta or just by itself</li>
         </ol>
+        <a href="../index.html">Return to the homepage</a>
     </body>
 </html>
