--- a/recipes/sesame-beef-stir-fry.html
+++ b/recipes/sesame-beef-stir-fry.html
@@ -44,5 +44,6 @@
             <li>Add back the beef and the left over marinade, let it simmer for a bit</li>
             <li>It's done. Enjoy the dish.</li>
         </ol>
+        <a href="../index.html">Return to the homepage</a>
     </body>
 </html>
