--- a/recipes/yellow-chicken-curry.html
+++ b/recipes/yellow-chicken-curry.html
@@ -43,5 +43,6 @@
             <li>Finally add the chicken stock, coconut milk. Let it simmer for a bit until the sauce thickens</li>
             <li>Now it's ready to be served. Enjoy!</li>
         </ol>
+        <a href="../index.html">Return to the homepage</a>
     </body>
 </html>
