Add an image of a crow

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Odin Recipes</title>
     </head> 
     <body>
+        <img src="./images/vector-raven.png" alt="stylized raven" height="346px" width="500px">
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/chilli-con-carne.html">Chilli con carne</a></li>
