Add tagline and classes to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head> 
     <body>
         <img src="./images/vector-raven.png" alt="stylized raven" height="346px" width="500px">
-        <h1>Odin Recipes</h1>
+        <h1 class="title">Odin's Recipes</h1>
+        <p class="tagline">serving recipe's from beyond our mortal reach</p>
         <ul>
             <li><a href="./recipes/chilli-con-carne.html">Chilli con carne</a></li>
             <li><a href="./recipes/yellow-chicken-curry.html">Yellow chicken curry</a></li>
