--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -7,8 +7,8 @@
     <body>
         <h1>Chilli con carne</h1>
         <img src="../images/640px-Pot-o-chili.jpg" alt="A pot of chilli with whole green hot chilis, kidney beans, and tomatoes" width="640" height="452"/>
-        <p>This is a rather simple and easy chilli con carne recipe.</p>
-        <p>It's a perfect dish to serve at casual get-togethers or other gatherings.</p>
+        <p>The bold fiery nature of Chili brings strengh and warmth, that echoes the eternal flames of muspelheim fire giants.</p>
+        <p>This is a rather simple and easy chilli con carne recipe. It's a perfect dish to serve at casual get-togethers or other gatherings.</p>
         <h2>Ingredients:</h2>
         <ul>
             <li>Minced beef 500g</li>
