--- a/recipes/sesame-beef-stir-fry.html
+++ b/recipes/sesame-beef-stir-fry.html
@@ -7,8 +7,8 @@
     <body>
         <h1>Sesame beef stir fry</h1>
         <img src="../images/sesame-beef-stir-fry.jpg" alt="a small bowl containting beef with pasta" width="640" width="960">
-        <p>This is another very simple dish that never ceases to amaze me.</p>
-        <p>It is very flexible and can easily be adapted to whatever you have in the fridge</p>
+        <p>Sesame beef stir fry, with it's robust tender meat and symphony of flavours from the sacred sessame, served atop a bed of steaming rice, is worthy to be served to any of our warriors.</p> 
+        <p>It is another very simple dish that never ceases to amaze me. For it's very flexible and can easily be adapted to whatever ingredients you have.</p>
         <h2>Ingredients</h2>
         <ul>
             <li>Beef strips 500g</li>
