--- a/recipes/yellow-chicken-curry.html
+++ b/recipes/yellow-chicken-curry.html
@@ -7,8 +7,8 @@
     <body>
         <h1>Yellow chicken curry recipe</h1>
         <img src="../images/yellow-chicken-curry.jpg" alt="A plate of delicious chicken curry with rice" width="640" height="475">
-        <p>This is one of the major kinds of Thai curry that can be found outside of Thailand</p>
-        <p>It tends to be less spicy, compared to other Thai curries, as well as less oily.
+        <p>Thai curry, a potent concoction of aromatic spices and rich coconut milk, can stir even Us with it's fiery essence and divine flavour.</p>
+        <p>Yellow curry is one of the major kinds of Thai curry that can be found outside of Thailand. It tends to be less spicy, compared to other Thai curries, as well as less oily.</p>
         <h2>Ingredients:</h2>
         <ul>
             <li>Chicken thigh fillet 500g</li>
