Link recipe pages to stylesheet

--- a/recipes/yellow-chicken-curry.html
+++ b/recipes/yellow-chicken-curry.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Yellow chicken curry recipe</title>
+        <link href="../css/style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Yellow chicken curry recipe</h1>
