--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Chilli con carne recipe</title>
+        <link href="../css/style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Chilli con carne</h1>
