--- a/recipes/sesame-beef-stir-fry.html
+++ b/recipes/sesame-beef-stir-fry.html
@@ -3,6 +3,7 @@
     <head>   
         <meta charset="UTF-8">
         <title>Beef stir fry</title>
+        <link href="../css/style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Sesame beef stir fry</h1>
