--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <img src="./images/vector-raven.png" alt="stylized raven" height="346px" width="500px">
             <h1 class="title">Odin's Recipes</h1>
             <p class="tagline">serving recipe's from beyond our mortal reach</p>
-            <ul>
-                <li><a href="./recipes/chilli-con-carne.html">Chilli con carne</a></li>
-                <li><a href="./recipes/yellow-chicken-curry.html">Yellow chicken curry</a></li>
-                <li><a href="./recipes/sesame-beef-stir-fry.html">Sesame beef stir fry</a></li>
+            <ul class="list-recipes">
+                <li><a class="list-item-recipe" href="./recipes/chilli-con-carne.html">Chilli con carne</a></li>
+                <li><a class="list-item-recipe" href="./recipes/yellow-chicken-curry.html">Yellow chicken curry</a></li>
+                <li><a class="list-item-recipe" href="./recipes/sesame-beef-stir-fry.html">Sesame beef stir fry</a></li>
             </ul>
         </div>
     </body>   
