Add style to recipes

--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -6,41 +6,47 @@
         <link href="../css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Chilli con carne</h1>
-        <img src="../images/640px-Pot-o-chili.jpg" alt="A pot of chilli with whole green hot chilis, kidney beans, and tomatoes" width="640" height="452"/>
-        <p>The bold fiery nature of Chili brings strengh and warmth, that echoes the eternal flames of muspelheim fire giants.</p>
-        <p>This is a rather simple and easy chilli con carne recipe. It's a perfect dish to serve at casual get-togethers or other gatherings.</p>
-        <h2>Ingredients:</h2>
-        <ul>
-            <li>Minced beef 500g</li>
-            <li>Can of chopped tomatoes 1</li>
-            <li>Tomato puree</li>
-            <li>Can of red kidney beans</li>
-            <li>Red bell pepper 1</li>
-            <li>Large onion 1</li>
-            <li>Beef stock cube 1</li>
-            <li><b>Spices to taste:</b></li>
-            <ul>
-                <li>Paprika</li>
-                <li>Chilli flakes</li>
-                <li>Ground cumin</li>
-                <li>Coriander leaves</li>
-            </ul>
-        </ul>
-        <h3><i>optional:</i></h3>
-        <ul>
-            <li><i>Rice</i></li>
-            <li><i>Pasta</i></li>
-        </ul>
-        <h2>Steps:</h2>
-        <ol>
-            <li>Heat a bit of oil in a large pot. Fry the onions and garlic until they are soft.</li>
-            <li>Add the minced beef into the pot and fry it untill it's brow. Make sure to break up any chunks of meat with a spoon.</li>
-            <li>Add the can of tomatoes, tomato puree, the spices as well as the stock cube</li>
-            <li>Bring the whole pot to simmer, cover with a lid and let it cook over a gentle heat.</li>
-            <li>Add the kidney beans and bell pepper. Cook for additional 10min</li>
-            <li>Serve with rice, pasta or just by itself</li>
-        </ol>
-        <a href="../index.html">Return to the homepage</a>
+        <div class="recipe-card">
+            <h1>Chilli con carne</h1>
+            <img class="image" src="../images/640px-Pot-o-chili.jpg" alt="A pot of chilli with whole green hot chilis, kidney beans, and tomatoes" width="640" height="452"/>
+            <p>The bold fiery nature of Chili brings strengh and warmth, that echoes the eternal flames of muspelheim fire giants.</p>
+            <p>This is a rather simple and easy chilli con carne recipe. It's a perfect dish to serve at casual get-togethers or other gatherings.</p>
+            <div class="ingredients">
+                <h2>Ingredients:</h2>
+                <ul>
+                    <li>Minced beef 500g</li>
+                    <li>Can of chopped tomatoes 1</li>
+                    <li>Tomato puree</li>
+                    <li>Can of red kidney beans</li>
+                    <li>Red bell pepper 1</li>
+                    <li>Large onion 1</li>
+                    <li>Beef stock cube 1</li>
+                    <li><b>Spices to taste:</b></li>
+                    <ul>
+                        <li>Paprika</li>
+                        <li>Chilli flakes</li>
+                        <li>Ground cumin</li>
+                        <li>Coriander leaves</li>
+                    </ul>
+                </ul>
+            </div>
+            <div class="ingredients-optional">
+                <h3><i>optional:</i></h3>
+                <ul>
+                    <li><i>Rice</i></li>
+                    <li><i>Pasta</i></li>
+                </ul>
+            </div>
+            <h2>Steps:</h2>
+            <ol>
+                <li>Heat a bit of oil in a large pot. Fry the onions and garlic until they are soft.</li>
+                <li>Add the minced beef into the pot and fry it untill it's brow. Make sure to break up any chunks of meat with a spoon.</li>
+                <li>Add the can of tomatoes, tomato puree, the spices as well as the stock cube</li>
+                <li>Bring the whole pot to simmer, cover with a lid and let it cook over a gentle heat.</li>
+                <li>Add the kidney beans and bell pepper. Cook for additional 10min</li>
+                <li>Serve with rice, pasta or just by itself</li>
+            </ol>
+            <a class="backbutton" href="../index.html">Return to homepage</a>
+        </div>
     </body>
 </html>
