--- a/recipes/sesame-beef-stir-fry.html
+++ b/recipes/sesame-beef-stir-fry.html
@@ -6,45 +6,51 @@
         <link href="../css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Sesame beef stir fry</h1>
-        <img src="../images/sesame-beef-stir-fry.jpg" alt="a small bowl containting beef with pasta" width="640" width="960">
-        <p>Sesame beef stir fry, with it's robust tender meat and symphony of flavours from the sacred sessame, served atop a bed of steaming rice, is worthy to be served to any of our warriors.</p> 
-        <p>It is another very simple dish that never ceases to amaze me. For it's very flexible and can easily be adapted to whatever ingredients you have.</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>Beef strips 500g</li>
-            <li>Bell pepper</li>
-            <li>Snow peas</li>
-            <li>Carrots</li>
-            <li>Onion</li>
-            <li>Garlic</li>
-            <li>Sesame seeds</li>
-            <li><b>Spices, sauce:</b></li>
-            <ul>
-                <li>Black pepper</li>
-                <li>Salt</li>
-                <li>Soy sauce</li>
-                <li>Oyster sauce</li>
-                <li>Sweet chilli sauce</li>
-            </ul>
-        </ul>
-        <h3><i>Optional</i></h3>
-        <ul>
-            <li>Rice (basmati, jasmin)</li>
-            <li>Rice noodles</li>
-            <li>Egg noodles</li>
-            <li>Pasta</li>
-        </ul>
-        <h2>Steps:</h2>
-        <ol>
-            <li>Combine the beef, spices, sauce, sesame seeds in a bowl. Leave it to marinade</li>
-            <li>Remove the beef from marinade</li>
-            <li>Fry the garlic and onions until soft</li>
-            <li>Add beef until it's cooked. Put it to the side.</li>
-            <li>Fry the rest of the vegetables on a high heat, for a short bit</li>
-            <li>Add back the beef and the left over marinade, let it simmer for a bit</li>
-            <li>It's done. Enjoy the dish.</li>
-        </ol>
-        <a href="../index.html">Return to the homepage</a>
+        <div class="recipe-card">
+            <h1>Sesame beef stir fry</h1>
+            <img class="image" src="../images/sesame-beef-stir-fry.jpg" alt="a small bowl containting beef with pasta" width="640" width="960">
+            <p>Sesame beef stir fry, with it's robust tender meat and symphony of flavours from the sacred sessame, served atop a bed of steaming rice, is worthy to be served to any of our warriors.</p> 
+            <p>It is another very simple dish that never ceases to amaze me. For it's very flexible and can easily be adapted to whatever ingredients you have.</p>
+            <div class="ingredients">
+            <h2>Ingredients</h2>
+                <ul>
+                    <li>Beef strips 500g</li>
+                    <li>Bell pepper</li>
+                    <li>Snow peas</li>
+                    <li>Carrots</li>
+                    <li>Onion</li>
+                    <li>Garlic</li>
+                    <li>Sesame seeds</li>
+                    <li><b>Spices, sauce:</b></li>
+                    <ul>
+                        <li>Black pepper</li>
+                        <li>Salt</li>
+                        <li>Soy sauce</li>
+                        <li>Oyster sauce</li>
+                        <li>Sweet chilli sauce</li>
+                    </ul>
+                </ul>
+            </div>
+            <div class="ingredients-optional">
+            <h3><i>Optional</i></h3>
+                <ul><i>
+                    <li>Rice (basmati, jasmin)</li>
+                    <li>Rice noodles</li>
+                    <li>Egg noodles</li>
+                    <li>Pasta</li>
+                </ul></i>
+            </div>
+            <h2>Steps:</h2>
+            <ol>
+                <li>Combine the beef, spices, sauce, sesame seeds in a bowl. Leave it to marinade</li>
+                <li>Remove the beef from marinade</li>
+                <li>Fry the garlic and onions until soft</li>
+                <li>Add beef until it's cooked. Put it to the side.</li>
+                <li>Fry the rest of the vegetables on a high heat, for a short bit</li>
+                <li>Add back the beef and the left over marinade, let it simmer for a bit</li>
+                <li>It's done. Enjoy the dish.</li>
+            </ol>
+            <a class="backbutton" href="../index.html">Return to homepage</a>
+        </div>
     </body>
 </html>
