--- a/recipes/yellow-chicken-curry.html
+++ b/recipes/yellow-chicken-curry.html
@@ -6,44 +6,50 @@
         <link href="../css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Yellow chicken curry recipe</h1>
-        <img src="../images/yellow-chicken-curry.jpg" alt="A plate of delicious chicken curry with rice" width="640" height="475">
-        <p>Thai curry, a potent concoction of aromatic spices and rich coconut milk, can stir even Us with it's fiery essence and divine flavour.</p>
-        <p>Yellow curry is one of the major kinds of Thai curry that can be found outside of Thailand. It tends to be less spicy, compared to other Thai curries, as well as less oily.</p>
-        <h2>Ingredients:</h2>
-        <ul>
-            <li>Chicken thigh fillet 500g</li>
-            <li>Coconut milk 400g</li>
-            <li>Chicke stock 400ml</li>
-            <li>Onion 1</li>
-            <li>Garlic </li>
-            <li>Ginger</li>
-            <li>Star anise 3</li>
-            <li>Cinnamon stick</li>
-            <li>Spices to taste:</li>
-            <ul>
-                <li>Salt</li>
-                <li>Garam masala</li>
-                <li>Coriander powder</li>
-                <li>Cumin powder</li>
-                <li>Fennel powder</li>
-            </ul>
-        </ul>
-        <h3><i>Optional:</i></h3>
-        <ul>
-            <li><i>Rice</i></li>
-        </ul>
-        <h2>Steps:</h2>
-        <ol>
-            <li>Mix the spices in a bowl</li>
-            <li>Toast the star anise and cinnamon</li>
-            <li>Add and cook the diced onion until soft</li>
-            <li>Add the chiken, fry until the outside is no longer raw</li>
-            <li>Add ginger, garlic</li>
-            <li>Add the rest of the spice mix</li>
-            <li>Finally add the chicken stock, coconut milk. Let it simmer for a bit until the sauce thickens</li>
-            <li>Now it's ready to be served. Enjoy!</li>
-        </ol>
-        <a href="../index.html">Return to the homepage</a>
+        <div class="recipe-card">    
+            <h1>Yellow chicken curry recipe</h1>
+            <img class="image" src="../images/yellow-chicken-curry.jpg" alt="A plate of delicious chicken curry with rice" width="640" height="475">
+            <p>Thai curry, a potent concoction of aromatic spices and rich coconut milk, can stir even Us with it's fiery essence and divine flavour.</p>
+            <p>Yellow curry is one of the major kinds of Thai curry that can be found outside of Thailand. It tends to be less spicy, compared to other Thai curries, as well as less oily.</p>
+            <div class="ingredients">
+                <h2>Ingredients:</h2>
+                <ul>
+                    <li>Chicken thigh fillet 500g</li>
+                    <li>Coconut milk 400g</li>
+                    <li>Chicke stock 400ml</li>
+                    <li>Onion 1</li>
+                    <li>Garlic </li>
+                    <li>Ginger</li>
+                    <li>Star anise 3</li>
+                    <li>Cinnamon stick</li>
+                    <li>Spices to taste:</li>
+                    <ul>
+                        <li>Salt</li>
+                        <li>Garam masala</li>
+                        <li>Coriander powder</li>
+                        <li>Cumin powder</li>
+                        <li>Fennel powder</li>
+                    </ul>
+                </ul>
+            </div>
+            <div class="ingredients-optional">
+                <h3><i>Optional:</i></h3>
+                <ul>
+                    <li><i>Rice</i></li>
+                </ul>
+            </div>
+                <h2>Steps:</h2>
+                <ol>
+                    <li>Mix the spices in a bowl</li>
+                    <li>Toast the star anise and cinnamon</li>
+                    <li>Add and cook the diced onion until soft</li>
+                    <li>Add the chiken, fry until the outside is no longer raw</li>
+                    <li>Add ginger, garlic</li>
+                    <li>Add the rest of the spice mix</li>
+                    <li>Finally add the chicken stock, coconut milk. Let it simmer for a bit until the sauce thickens</li>
+                    <li>Now it's ready to be served. Enjoy!</li>
+                </ol>
+            <a class="backbutton" href="../index.html">Return to homepage</a>
+        </div>
     </body>
 </html>
