--- a/recipes/sesame-beef-stir-fry.html
+++ b/recipes/sesame-beef-stir-fry.html
@@ -9,8 +9,7 @@
         <div class="recipe-card">
             <h1>Sesame beef stir fry</h1>
             <img class="image" src="../images/sesame-beef-stir-fry.jpg" alt="a small bowl containting beef with pasta" width="300" width="450">
-            <p>Sesame beef stir fry, with it's robust tender meat and symphony of flavours from the sacred sessame, served atop a bed of steaming rice, is worthy to be served to any of our warriors.</p> 
-            <p>It is another very simple dish that never ceases to amaze me. For it's very flexible and can easily be adapted to whatever ingredients you have.</p>
+            <p>Sesame beef stir fry, with it's robust tender meat and symphony of flavours from the sacred sessame, served atop a bed of steaming rice, is worthy to be served to any of our warriors. It is another very simple dish that never ceases to amaze me. For it's very flexible and can easily be adapted to whatever ingredients you have.</p>
             <div class="ingredients">
             <h2>Ingredients</h2>
                 <ul>
