Remove <i> from recipe pages

--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -30,10 +30,10 @@
                 </ul>
             </div>
             <div class="ingredients-optional">
-                <h3><i>optional:</i></h3>
+                <h3>optional:</h3>
                 <ul>
-                    <li><i>Rice</i></li>
-                    <li><i>Pasta</i></li>
+                    <li>Rice</li>
+                    <li>Pasta</li>
                 </ul>
             </div>
             <h2>Steps:</h2>
