--- a/recipes/sesame-beef-stir-fry.html
+++ b/recipes/sesame-beef-stir-fry.html
@@ -31,13 +31,13 @@
                 </ul>
             </div>
             <div class="ingredients-optional">
-            <h3><i>Optional</i></h3>
-                <ul><i>
+            <h3>Optional</h3>
+                <ul>
                     <li>Rice (basmati, jasmin)</li>
                     <li>Rice noodles</li>
                     <li>Egg noodles</li>
                     <li>Pasta</li>
-                </ul></i>
+                </ul>
             </div>
             <h2>Steps:</h2>
             <ol>
