--- a/recipes/yellow-chicken-curry.html
+++ b/recipes/yellow-chicken-curry.html
@@ -32,9 +32,9 @@
                 </ul>
             </div>
             <div class="ingredients-optional">
-                <h3><i>Optional:</i></h3>
+                <h3>Optional:</h3>
                 <ul>
-                    <li><i>Rice</i></li>
+                    <li>Rice</li>
                 </ul>
             </div>
                 <h2>Steps:</h2>
