Fix a typo in chilli con carne

--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -30,7 +30,7 @@
                 </ul>
             </div>
             <div class="ingredients-optional">
-                <h3>optional:</h3>
+                <h3>Optional:</h3>
                 <ul>
                     <li>Rice</li>
                     <li>Pasta</li>
